// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixable 1`] = `
"
ESLint   │ Processed 4 files in <random>s.
ESLint   │ 
<random>/a/a/a.mjs
  3:1  error  \`fs\` import should occur before import of \`path\`  import-x/order

<random>/a/a/a.mts
  3:1  error  \`fs\` import should occur before import of \`path\`  import-x/order

<random>/a/a/a.ts
  3:1  error  \`fs\` import should occur before import of \`path\`  import-x/order

✖ 3 problems (3 errors, 0 warnings)
  3 errors and 0 warnings potentially fixable with the \`--fix\` option.

Prettier │ Processed 8 files in <random>s.
Prettier │ Flagged 4 files:
Prettier │ b.md
Prettier │ c.json
Prettier │ d.js
Prettier │ package.json
tsc      │ TSFILE: <random>/lib/tsconfig.tsbuildinfo
tsc      │ tsc --noEmit exited with code 0
skuba    │ Processed skuba lints in <random>s.
ESLint, Prettier found issues that require triage.

Try running pnpm exec skuba format to fix them.
"
`;

exports[`fixable 2`] = `
[
  "
Options: { context: 'skuba-lint', scopeContextToStep: true, style: 'error' }

\`skuba lint\` found issues that require triage:

**ESLint**

\`\`\`term
<random>/a/a/a.mjs
  3:1  error  \`fs\` import should occur before import of \`path\`  import-x/order

<random>/a/a/a.mts
  3:1  error  \`fs\` import should occur before import of \`path\`  import-x/order

<random>/a/a/a.ts
  3:1  error  \`fs\` import should occur before import of \`path\`  import-x/order

✖ 3 problems (3 errors, 0 warnings)
  3 errors and 0 warnings potentially fixable with the \`--fix\` option.
\`\`\`

**Prettier**

\`\`\`term
b.md
c.json
d.js
package.json
\`\`\`
",
]
`;

exports[`needs patches 1`] = `
"
ESLint   │ Processed 2 files in <random>s.
Prettier │ Processed 6 files in <random>s.
tsc      │ TSFILE: <random>/lib/tsconfig.tsbuildinfo
tsc      │ tsc --noEmit exited with code 0
skuba    │ skuba has patches to apply. Run pnpm exec skuba format to run them. upgrade-skuba
skuba    │ Processed skuba lints in <random>s.
skuba found issues that require triage.

Try running pnpm exec skuba format to fix them.
"
`;

exports[`needs patches 2`] = `
[
  "
Options: { context: 'skuba-lint', scopeContextToStep: true, style: 'error' }

\`skuba lint\` found issues that require triage:

**skuba**

\`\`\`term
<random>/skuba.config.ts skuba has patches to apply. Run pnpm exec skuba format to run them.
\`\`\`
",
]
`;

exports[`ok --debug 1`] = `
"
ESLint   │ Initialising ESLint...
ESLint   │ Processing files...
ESLint   │ Processed 2 files in <random>s.
ESLint   │ ○ a/a/a.ts
ESLint   │ ○ d.js
Prettier │ Initialising Prettier...
Prettier │ Detected working directory: <random>
Prettier │ Discovering files...
Prettier │ Discovered 10 files.
Prettier │ Linting files...
Prettier │ .dockerignore
Prettier │   parser: -
Prettier │ .gitignore
Prettier │   parser: -
Prettier │ .npmrc
Prettier │   parser: -
Prettier │ .prettierignore
Prettier │   parser: -
Prettier │ b.md
Prettier │   parser: markdown
Prettier │ c.json
Prettier │   parser: json
Prettier │ d.js
Prettier │   parser: babel
Prettier │ package.json
Prettier │   parser: json-stringify
Prettier │ tsconfig.json
Prettier │   parser: json
Prettier │ a/a/a.ts
Prettier │   parser: typescript
Prettier │ Processed 6 files in <random>s.
tsc      │ TSFILE: <random>/lib/tsconfig.tsbuildinfo
tsc      │ Files: <random>
tsc      │ Lines of Library: <random>
tsc      │ Lines of Definitions: <random>
tsc      │ Lines of TypeScript: <random>
tsc      │ Lines of JavaScript: <random>
tsc      │ Lines of JSON: <random>
tsc      │ Lines of Other: <random>
tsc      │ Identifiers: <random>
tsc      │ Symbols: <random>
tsc      │ Types: <random>
tsc      │ Instantiations: <random>
tsc      │ Memory used: <random>K
tsc      │ Assignability cache size: <random>
tsc      │ Identity cache size: <random>
tsc      │ Subtype cache size: <random>
tsc      │ Strict subtype cache size: <random>
tsc      │ I/O Read time: <random>s
tsc      │ Parse time: <random>s
tsc      │ ResolveModule time: <random>s
tsc      │ ResolveTypeReference time: <random>s
tsc      │ ResolveLibrary time: <random>s
tsc      │ Program time: <random>s
tsc      │ Bind time: <random>s
tsc      │ Check time: <random>s
tsc      │ I/O Write time: <random>s
tsc      │ printTime time: <random>s
tsc      │ Emit time: <random>s
tsc      │ Total time: <random>s
tsc      │ tsc --extendedDiagnostics --noEmit exited with code 0
skuba    │ Processed skuba lints in <random>s.
"
`;

exports[`ok --debug 2`] = `[]`;

exports[`ok 1`] = `
"
ESLint   │ Processed 2 files in <random>s.
Prettier │ Processed 6 files in <random>s.
tsc      │ TSFILE: <random>/lib/tsconfig.tsbuildinfo
tsc      │ tsc --noEmit exited with code 0
skuba    │ Processed skuba lints in <random>s.
"
`;

exports[`ok 2`] = `[]`;

exports[`unfixable 1`] = `
"
ESLint   │ Processed 2 files in <random>s.
ESLint   │ 
<random>/a/a/a.ts
  3:1  error  \`fs\` import should occur before import of \`path\`  import-x/order
  8:3  error  Unexpected console statement                      no-console

<random>/d.js
  1:1  error  Parsing error: Unexpected token }

✖ 3 problems (3 errors, 0 warnings)
  1 error and 0 warnings potentially fixable with the \`--fix\` option.

Prettier │ Processed 6 files in <random>s.
Prettier │ Flagged 2 files:
Prettier │ d.js SyntaxError: Unexpected token (1:1)
> 1 | }
    | ^
  2 |
Prettier │ a/a/a.ts
tsc      │ d.js(1,1): error TS1128: Declaration or statement expected.
tsc      │ TSFILE: <random>/lib/tsconfig.tsbuildinfo
tsc      │ tsc --noEmit exited with code 2
skuba    │ Processed skuba lints in <random>s.
ESLint, Prettier, tsc found issues that require triage.

Try running pnpm exec skuba format to fix them.
"
`;

exports[`unfixable 2`] = `
[
  "
Options: { context: 'skuba-lint', scopeContextToStep: true, style: 'error' }

\`skuba lint\` found issues that require triage:

**ESLint**

\`\`\`term
<random>/a/a/a.ts
  3:1  error  \`fs\` import should occur before import of \`path\`  import-x/order
  8:3  error  Unexpected console statement                      no-console

<random>/d.js
  1:1  error  Parsing error: Unexpected token }

✖ 3 problems (3 errors, 0 warnings)
  1 error and 0 warnings potentially fixable with the \`--fix\` option.
\`\`\`

**Prettier**

\`\`\`term
d.js SyntaxError: Unexpected token (1:1)
> 1 | }
    | ^
  2 |
a/a/a.ts
\`\`\`

**tsc**

\`\`\`term
d.js(1,1): error TS1128: Declaration or statement expected.
tsc --noEmit exited with code 2
\`\`\`
",
]
`;
